--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Book detail</h1>
 <div>
-  <p><%= image_tag 'no_image.jpg' %><br>
+  <p><%= image_tag @book.user.get_image(100,100) %><br>
      <%= @book.user.name %></p>
   <p>Title:<%= @book.title %></p>
   <p>Opsioin:<%= @book.body %></p>
