--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<h1>Users</h1>
+
+<% @users.each do |user| %>
+<div>
+    <p>image<%= image_tag user.get_image(100,100) %></p>
+    <p>name<%= user.name %></p>
+    <p><%= link_to "Show", user_path(user.id) %></p>
+</div>
+<% end %>
