--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1>User info</h1>
 <div>
-  <p><%= image_tag 'no_image.jpg' %></p>
+  <p><%= image_tag @user.get_image(100,100) %></p>
   <p>name<%= @user.name %></p>
   <p>introduction<%= @user.introduction %></p>
   <%= link_to "Edit", edit_user_path(@user.id) %>
