--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,18 @@
-<h1>User info</h1>
-<div>
-  <p><%= image_tag @user.get_image(100,100) %></p>
-  <p>name<%= @user.name %></p>
-  <p>introduction<%= @user.introduction %></p>
-  <%= link_to "Edit", edit_user_path(@user.id) %>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'show', user: @user %>
+        <%= render 'books/new', book: @book %>
+    </div>
+    <h1>Books</h1>
+      <% @books.each do |book| %>
+      <div>
+        <p><%= image_tag book.user.get_image(100,100) %><br>
+           <%= book.user.name %></p>
+        <p>Title</a>
+        <sapn><%= link_to book.title, book_path(book.id) %></sapn>
+        <p>Opsioin:<%= book.body %></p>
+      </div>
+      <% end %>
+  </div>
 </div>
