--- a/app/views/books/_new.html.erb
+++ b/app/views/books/_new.html.erb
@@ -1,10 +1,10 @@
 <h1>New book</h1>
-<%= form_with model: @book, eurl: '/books', method: :post do |f| %>
+<%= form_with model: book, eurl: '/books', method: :post do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
 	
   <h4>Opinion</h4>
   <%= f.text_area :body %>
-	
+	<br>
   <%= f.submit 'Create Book' %>
 <% end %>
