--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,11 +1,31 @@
-<h1>Books</h1>
 
-<% @books.each do |book| %>
-<div>
-  <p><%= image_tag book.user.get_image(100,100) %></p><br>
-     <%= book.user.name %></p>
-  <p>Title</a>
-  <sapn><%= link_to book.title, book_path(book.id) %></sapn>
-  <p>Opsioin:<%= book.body %></p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'users/show', user: @user %>
+      <%= render 'new', book: @book %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+        <table class="table table-hover table-inverse">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Title</th>
+              <th>Opinion</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <% @books.each do |book| %>
+              <tb><%= image_tag book.user.get_image(100,100) %></tb>
+              <tb><%= link_to book.title, book_path(book.id) %></tb>
+              <tb><%= book.body %></tb>
+              <% end %>
+            </tr>
+          </tbody>
+        </table>
+    </div>
+  </div>
 </div>
-<% end %>
