--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,2 +1,5 @@
-<h1>Homes#about</h1>
+<div class="container">
+  <div class="row">
+    <h1 class="px-3 mx-auto">
+      Welcome to <i class="fas fa-book" aria-hidden="true"></i><strong>Bookers</strong>!
 
