--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,25 +6,82 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/af84ec0176.js" crossorigin="anonymous"></script>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <header>
-    <% if user_signed_in? %>
-      <li>
-        <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-      </li>
-    <% else %>
-      <li>
-        <%= link_to "Sign_up", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "Log_in", new_user_session_path %>
-      </li>
-    <% end %>
-  </header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand mr-auto p-2 bd-highlight" href="/"><sapn>Bookers</sapn></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse show navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav ml-auto">
+                <% if user_signed_in? %>
+                  <li>
+                    <%= link_to user_path(current_user.id), class: 'nav-link text-ligth'  do %>
+                     <i class="fa-solid fa-house-chimney"></i>Home
+                    <% end %>
+                  </li>
+                  <li>
+                    <%= link_to users_path, class: 'nav-link text-ligth' do %>
+                    <i class="fa-solid fa-users"></i>Users
+                    <% end %>
+                  </li>
+                  <li>
+                    <%= link_to books_path, class: 'nav-link text-ligth' do %>
+                    <i class="fa-solid fa-book-open"></i>Books
+                    <% end %>
+                  </li>
+                  <li>
+                    <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-ligth' do %>
+                    <i class="fa-solid fa-right-from-bracket"></i>Log out
+                    <% end %>
+                  </li>
+                <% else %>
+                  <li>
+                    <%= link_to root_path, class: 'nav-link text-ligth' do %>
+                    <i class="fa-solid fa-house-chimney"></i>Home
+                    <% end %>
+                  </li>
+                  <li>
+                    <%= link_to about_path, class: 'nav-link text-ligth' do %>
+                    <i class="fa-solid fa-link"></i>About
+                    <% end %>
+                  </li>
+                  <li>
+                    <%= link_to new_user_registration_path, class: 'nav-link text-ligth' do %>
+                    <i class="fa-solid fa-user-plus"></i>Logn up
+                    <% end %>
+                  </li>
+                  <li>
+                    <%= link_to new_user_session_path, class: 'nav-link text-ligth' do %>
+                    <i class="fa-solid fa-right-to-bracket"></i>Logn in
+                    <% end %>
+                  </li>
+                <% end %>
+              </ul>
+            </div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <p id="notice"></p>
     <%= yield %>
+    </main>
+    <footer>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="mx-auto">
+            <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
