--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,18 @@
-<h1>Users</h1>
-
-<% @users.each do |user| %>
-<div>
-    <p>image<%= image_tag user.get_image(100,100) %></p>
-    <p>name<%= user.name %></p>
-    <p><%= link_to "Show", user_path(user.id) %></p>
+<div class="container px-5 px-sm-0">
+    <div class="row">
+      <div class="col-md-3">
+        <%= render 'show', user: @user %>
+        <%= render 'books/new', book: @book %>
+      </div>
+      <div class="col-md-8 offset-md-1">
+        <h1>Users</h1>
+          <% @users.each do |user| %>
+          <div>
+            <p>image<%= image_tag user.get_image(100,100) %></p>
+            <p>name<%= user.name %></p>
+            <p><%= link_to "Show", user_path(user.id) %></p>
+          </div>
+          <% end %>
+      </div>
+    </div>
 </div>
-<% end %>
