--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,13 +6,25 @@
       </div>
       <div class="col-md-8 offset-md-1">
         <h1>Users</h1>
-          <% @users.each do |user| %>
-          <div>
-            <p>image<%= image_tag user.get_image(100,100) %></p>
-            <p>name<%= user.name %></p>
-            <p><%= link_to "Show", user_path(user.id) %></p>
-          </div>
-          <% end %>
+          <table class="table table-hover table-inverse">
+            <thead>
+              <tr>
+                <th>inage</th>
+                <th>name</th>
+                <th colspan="3"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+              <% @users.each do |user| %>
+                <td><%= link_to user_path(user) do %>
+                  <%= image_tag user.get_profile_image(100,100) %><% end %></td>
+                <td><%= user.name %></td>
+                <td><%= link_to "Show", user_path(user.id) %></td>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
       </div>
     </div>
 </div>
