--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,26 +6,27 @@
       <%= render 'new', book: @book %>
     </div>
     <div class="col-md-8 offset-md-1">
-      <h2>Books</h2>
-        <table class="table table-hover table-inverse">
-          <thead>
-            <tr>
-              <th></th>
-              <th>Title</th>
-              <th>Opinion</th>
-              <th colspan="3"></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <% @books.each do |book| %>
-              <tb><%= image_tag book.user.get_image(100,100) %></tb>
-              <tb><%= link_to book.title, book_path(book.id) %></tb>
-              <tb><%= book.body %></tb>
-              <% end %>
-            </tr>
-          </tbody>
-        </table>
+     <h2>Books</h2>
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+             <th></th>
+             <th>Title</th>
+             <th>Opinion</th>
+             <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <% @books.each do |book| %>
+            <td><%= link_to user_path(book.user) do %>
+                <%= image_tag book.user.get_profile_image(100,100) %><% end %></td>
+            <td><%= link_to book.title, book_path(book.id) %></td>
+            <td><%= book.body %></td>
+          </tr>
+            <% end %>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
