--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,23 +1,30 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <div clas="col-md-3">
+    <div class="col-md-3">
       <%= render 'users/show', user: @user %>
-      <%= render 'new', book: @book %>
+      <%= render 'new', book: @new_book %>
     </div>
     <div class="col-md-8 offset-md-1">
-    <h1>Book detail</h1>
-      <table class="table">
-        <tbody>
-          <tr>
-            <th><%= image_tag @book.user.get_image(100,100) %><br>
-               <%= @book.user.name %></th>
-            <th><%= @book.title %></th>
-            <th><%= @book.body %></th>
-            <% if @book.user == current_user %>
-              <th><%= link_to "Edit", edit_book_path(@book.id) %></th>
-              <th><%= link_to "Destroy", book_path(@book), method: :delete, "data-confirm" => "本当に削除しますか？" %></th>
-            <% end %>
-          </tr>
+      <h2>Book detail</h2>
+        <table class="table">
+          <tbody>
+            <tr>
+              <td><%= link_to user_path(@book.user) do %>
+                  <%= image_tag @book.user.get_profile_image(100,100) %><br>
+                  <%= @book.user.name %><% end %></td>
+              <td><%= @book.title %></td>
+              <td><%= @book.body %></td>
+                <td>
+                  <% if @book.user == current_user %>
+                  <%= link_to "Edit", edit_book_path(@book.id), class: 'btn btn-sm btn-success' %>
+                  <% end %>
+                </td>
+                <td>
+                  <% if @book.user == current_user %>
+                  <%= link_to "Destroy", book_path(@book), method: :delete,  "data-confirm" => "本当に削除しますか？", class: 'btn btn-sm btn-danger' %>
+                  <% end %>
+                </td>
+            </tr>
         </tbody>
       </table>
     </div>
