--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
                 <% if user_signed_in? %>
                   <li>
                     <%= link_to user_path(current_user.id), class: 'nav-link text-ligth'  do %>
-                     <i class="fa-solid fa-house-chimney"></i>Home
+                     <i class="fas fa-home"></i>Home
                     <% end %>
                   </li>
                   <li>
@@ -40,13 +40,13 @@
                   </li>
                   <li>
                     <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-ligth' do %>
-                    <i class="fa-solid fa-right-from-bracket"></i>Log out
+                    <i class="fas fa-sign-out-alt"></i>Log out
                     <% end %>
                   </li>
                 <% else %>
                   <li>
                     <%= link_to root_path, class: 'nav-link text-ligth' do %>
-                    <i class="fa-solid fa-house-chimney"></i>Home
+                    <i class="fas fa-home"></i>Home
                     <% end %>
                   </li>
                   <li>
@@ -56,12 +56,12 @@
                   </li>
                   <li>
                     <%= link_to new_user_registration_path, class: 'nav-link text-ligth' do %>
-                    <i class="fa-solid fa-user-plus"></i>Logn up
+                    <i class="fa-solid fa-user-plus"></i>Sign up
                     <% end %>
                   </li>
                   <li>
                     <%= link_to new_user_session_path, class: 'nav-link text-ligth' do %>
-                    <i class="fa-solid fa-right-to-bracket"></i>Logn in
+                    <i class="fas fa-sign-in-alt"></i>Log in
                     <% end %>
                   </li>
                 <% end %>
@@ -72,6 +72,9 @@
     </header>
     <main>
       <p id="notice"></p>
+    <div>
+      <%= flash[:notice] %>
+    </div>
     <%= yield %>
     </main>
     <footer>
