--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -1,5 +1,5 @@
 <h2>User info</h2>
-<%= image_tag user.get_image(100,100) %>
+<%= image_tag user.get_profile_image(100,100) %>
 <table class="table">
   <tbody>
     <tr></tr>
@@ -11,8 +11,10 @@
       <th>introduction</th>
       <th><%= user.introduction %></th>
     </tr>
-    
-    
-    
   </tbody>
 </table>
+<div class="row">
+  <%= link_to edit_user_path(user[:id]), class: 'btn btn-outline-secondary btn-block' do %>
+    <i class="fas fa-user-cog" aria-hidden="true"></i>
+  <% end %>
+</div>
