--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,16 +1,34 @@
-<h1>User info</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>User info</h1>
+      <% if @user.errors.any? %>
+        <%= @user.errors.count %>errors prohibited this obj from being saved:
+        <ul>
+          <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
 
-<%= form_with model: @user do |f| %>
+        <%= form_with model: @user do |f| %>
+          <div class="form-group">
+            <h5 for="inputName">Name</h5>
+            <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"Name"%>
+          </div>
 
-   <h4 for="inputName">Name</h4>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"Name"%>
-  
-  <h4 for="inputImage">Image</h4>
-  <%= f.file_field :image, placeholder: "Image", accept: "image/*" %>
-  
-  <h4>Introduction</h4>
-  <%= f.text_area :introduction %>
-  
-  <%= f.submit 'Update User' %>
-  
-<% end %>
+          <div class="form-group">
+            <h5 for="inputImage">Image</h5>
+            <%= f.file_field :profile_image, placeholder: "Image", accept: "image/*" %>
+          </div>
+
+          <div class="form-group">
+            <h5>Introduction</h5>
+            <%= f.text_area :introduction %>
+          </div>
+
+          <div class="form-group "><%= f.submit 'Update User', class: 'btn btn-secondary' %></div>
+        <% end %>
+    </div>
+  </div>
+</div>
