--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,17 +2,30 @@
   <div class="row">
     <div class="col-md-3">
       <%= render 'show', user: @user %>
-        <%= render 'books/new', book: @book %>
+      <%= render 'books/new', book: @book %>
     </div>
-    <h1>Books</h1>
-      <% @books.each do |book| %>
-      <div>
-        <p><%= image_tag book.user.get_image(100,100) %><br>
-           <%= book.user.name %></p>
-        <p>Title</a>
-        <sapn><%= link_to book.title, book_path(book.id) %></sapn>
-        <p>Opsioin:<%= book.body %></p>
-      </div>
-      <% end %>
+    <div class="col-md-8 offset-md-1">
+      <h1>Books</h1>
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <% @books.each do |book| %>
+            <td><%= link_to user_path(book.user) do %>
+              <%= image_tag book.user.get_profile_image(100,100) %><% end %><br>
+            <%= book.user.name %></td>
+            <td><%= link_to book.title, book_path(book.id) %></td>
+            <td><%= book.body %></td>
+          </tr>
+            <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
